# medtrix

./: .gitignore  Dockerfile  README.md  dataset.dvc  environment.yml  mlruns.dvc  model.dvc  pyproject.toml  requirements.txt
.dvc/: config
.ipynb_checkpoints/: medtrix_analysis-checkpoint.ipynb
dataset/: COMPARE-2022.xlsx  drugs_list.pkl
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/02b49c5a83a84daead6ff77cfbcb973f/: meta.yaml
mlruns/1/1d66c89d3dd54722baf77b3d0cb6c69f/: meta.yaml
mlruns/1/2140d6ca626d40659447b31ac550ab9e/: meta.yaml
mlruns/1/2cf96c09d94a46a9baee154d602f123d/: meta.yaml
mlruns/1/2daa2a81cf0140d78f6774712e26d566/: meta.yaml
mlruns/1/3053a7e3c3ae43d68ec25ebec75a5fd0/: meta.yaml
mlruns/1/3d113e5d7ae44fb4828ff3ff871c36dd/: meta.yaml
mlruns/1/568bce00f6034cb59926cc236736c09f/: meta.yaml
mlruns/1/5816d1e833694b5f96004561fea996ce/: meta.yaml
mlruns/1/5d3497fd98c64c44bda92428ce756fc2/: meta.yaml
mlruns/1/657bb32fe08c4720ba16f3d41f7f6ef1/: meta.yaml
mlruns/1/85cf63e3071546b6ba37b0729ff81ce8/: meta.yaml
mlruns/1/8926200eba2e46e6855ac71c74812d22/: meta.yaml
mlruns/1/8afeb7f92af8496c84b3d2550baab477/: meta.yaml
mlruns/1/93bc479277d2439ab8c891c4ae71ed36/: meta.yaml
mlruns/1/940337f96b5240e0bf30fb31630f55ba/: meta.yaml
mlruns/1/95b72103896a41d885547b559c672592/: meta.yaml
mlruns/1/9a781340fcdd4aa6bf705fe51a57c61a/: meta.yaml
notebook/: medtrix_analysis.ipynb  medtrix_input_text.ipynb  medtrix_mimic_analysis.ipynb  medtrix_nlg.ipynb
notebook/.ipynb_checkpoints/: medtrix_analysis-checkpoint.ipynb
notebook/scripts/: list_fake_data.pkl  placeholdermapper.py
src/: detector.py  main.py  replace.py  similarity.py
src/data/: allergens_list.pkl  mimic_fake_data.py
(+403 files in other folders)
